# grib-viewer

./: .gitignore  CMakeLists.txt  ECCODES_INSTALL.md  QUICKSTART.md  README.md  build.sh  check-deps.sh
src/: color_adjust.h  export_image.cpp  export_image.h  gradient.h  grib_collection.cpp  grib_collection.h  grib_reader.cpp  grib_reader.h  main.cpp  messagesWindow.cpp  messagesWindow.h  mpl_gradients.cpp  mpl_gradients.h  renderer.cpp  renderer.h  settings.cpp  settings.h
src/ui/: mainWindow.cpp  mainWindow.h  messagesWindow.cpp  visualizationSettingsWindow.cpp  visualizationSettingsWindow.h
